judy added footer

--- a/home.html
+++ b/home.html
@@ -38,5 +38,11 @@
         >
       </div>
     </div>
+    <footer>
+      <p>
+        <a href="/api/tables">API Table Link</a>
+        <a href="/api/waitlist">API Wait List</a>
+      </p>
+    </footer>
   </body>
 </html>
