--- a/tables.html
+++ b/tables.html
@@ -46,5 +46,11 @@
         </button>
       </form>
     </div>
+    <footer>
+      <p>
+        <a href="/api/tables">API Table Link</a>
+        <a href="/api/waitlist">API Wait List</a>
+      </p>
+    </footer>
   </body>
 </html>
