--- a/tables.html
+++ b/tables.html
@@ -38,7 +38,7 @@
         </div>
         <div class="form-group">
           <label for="usr">Unique ID: </label>
-          <input type="text" class="form-control" id="number" />
+          <input type="text" class="form-control" id="idnumber" />
         </div>
 
         <button type="button" class="btn btn-success btn-block" id="submit">
@@ -48,7 +48,7 @@
     </div>
     <footer>
       <p>
-        <a href="/api/tables">API Table Link</a>
+        <a href="/api/tables">API Table Link</a> " | "
         <a href="/api/waitlist">API Wait List</a>
       </p>
     </footer>
