--- a/home.html
+++ b/home.html
@@ -25,22 +25,23 @@
         <h1 class="text-center">Hot Restaurant</h1>
         <hr />
         <h2 class="text-center">Book a seat before they are all taken</h2>
-
-        <a
-          ><button type="button" class="btn btn-lg btn-info btn-primary">
-            View tables!
-          </button></a
-        >
-        <a class="text-center"
-          ><button type="button" class="btn btn-lg btn-info btn-danger">
-            Make a reservation!
-          </button></a
-        >
+        <div class="text-center">
+          <a
+            ><button type="button" class="btn btn-lg btn-info btn-primary">
+              View tables!
+            </button></a
+          >
+          <a class="text-center"
+            ><button type="button" class="btn btn-lg btn-info btn-danger">
+              Make a reservation!
+            </button></a
+          >
+        </div>
       </div>
     </div>
     <footer>
       <p>
-        <a href="/api/tables">API Table Link</a>
+        <a href="/api/tables">API Table Link</a> " | "
         <a href="/api/waitlist">API Wait List</a>
       </p>
     </footer>
