--- a/reserve.html
+++ b/reserve.html
@@ -20,31 +20,12 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <hr />
-      <form role="form" id="survey">
-        <h1>Table reservation</h1>
-        <div class="form-group">
-          <label for="usr">Name: </label>
-          <input type="text" class="form-control" id="name" />
-        </div>
-        <div class="form-group">
-          <label for="usr">Phone Number: </label>
-          <input type="text" class="form-control" id="number" />
-        </div>
-        <div class="form-group">
-          <label for="usr">Email: </label>
-          <input type="text" class="form-control" id="email" />
-        </div>
-        <div class="form-group">
-          <label for="usr">Unique ID: </label>
-          <input type="text" class="form-control" id="number" />
-        </div>
-
-        <button type="button" class="btn btn-success btn-block" id="submit">
-          Submit
-        </button>
-      </form>
-    </div>
+    <footer>
+      <p>
+        <a href="#">Clear Tables</a> " | "
+        <a href="/api/tables">API Table Link</a> " | "
+        <a href="/api/waitlist">API Wait List</a>
+      </p>
+    </footer>
   </body>
 </html>
