--- a/home.html
+++ b/home.html
@@ -32,7 +32,11 @@
             </button></a
           >
           <a class="text-center"
-            ><button type="button" class="btn btn-lg btn-info btn-danger">
+            ><button
+              id="add-btn"
+              type="button"
+              class="btn btn-lg btn-info btn-danger"
+            >
               Make a reservation!
             </button></a
           >
@@ -46,4 +50,30 @@
       </p>
     </footer>
   </body>
+  <script type="text/javascript">
+    //reservation
+    $("#add-btn").on("click", function(event) {
+      event.preventDefault();
+      var newClient = {
+        name: $("#name")
+          .val()
+          .trim(),
+        phoneNumber: $("#number")
+          .val()
+          .trim(),
+        email: $("#email")
+          .val()
+          .trim(),
+        id: $("#idnumber")
+          .val()
+          .trim()
+      };
+
+      // Question: What does this code do??
+      $.post("/api/client", newClient).then(function(data) {
+        console.log("add.html", data);
+        alert("Adding client...");
+      });
+    });
+  </script>
 </html>
