added header to all html

--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
     </div>
     <footer>
       <p>
-        <a href="/api/tables">API Table Link</a> " | "
+        <a href="/api/tables">API Table Link</a> |
         <a href="/api/waitlist">API Wait List</a>
       </p>
     </footer>
