--- a/reserve.html
+++ b/reserve.html
@@ -11,6 +11,7 @@
       integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
@@ -42,6 +43,23 @@
           >
         </div>
       </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class= "col-lg-12">
+            <div class="class">
+                <div class = "card-header">
+                    <h4>Current Reservations</h4>
+            </div>
+            <div class="card-body">
+                <ul id="tablelist" class="list-group"></ul>
+            </div>
+            <div class="card mt-4">
+                    <div class = "card-header">
+                            <h4>Waiting List</h4>
+                    </div>
+            </div>
+        </div>
     </div>
     <footer>
       <p>
