--- a/tables.html
+++ b/tables.html
@@ -11,6 +11,12 @@
       integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
     <script src="https://code.jquery.com/jquery.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
@@ -43,6 +49,7 @@
         </div>
       </div>
     </div>
+
     <div class="container">
       <div class="card"></div>
       <form role="form" id="survey">
@@ -69,6 +76,7 @@
         </button>
       </form>
     </div>
+
     <footer>
       <p>
         <a href="/api/tables">API Table Link</a> |
