--- a/reserve.html
+++ b/reserve.html
@@ -11,13 +11,19 @@
       integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
     <script src="https://code.jquery.com/jquery.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
       integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -43,26 +49,36 @@
         </div>
       </div>
     </div>
+
     <div class="container">
-        <div class="row">
-            <div class= "col-lg-12">
-            <div class="class">
-                <div class = "card-header">
-                    <h4>Current Reservations</h4>
-            </div>
-            <div class="card-body">
-                <ul id="tablelist" class="list-group"></ul>
-            </div>
-            <div class="card mt-4">
-                    <div class = "card-header">
-                            <h4>Waiting List</h4>
-                    </div>
-            </div>
+      <div class="card"></div>
+      <form role="form" id="survey">
+        <h1>Table reservation</h1>
+        <div class="form-group">
+          <label for="usr">Name: </label>
+          <input type="text" class="form-control" id="name" />
         </div>
+        <div class="form-group">
+          <label for="usr">Phone Number: </label>
+          <input type="text" class="form-control" id="number" />
+        </div>
+        <div class="form-group">
+          <label for="usr">Email: </label>
+          <input type="text" class="form-control" id="email" />
+        </div>
+        <div class="form-group">
+          <label for="usr">Unique ID: </label>
+          <input type="text" class="form-control" id="idnumber" />
+        </div>
+
+        <button type="button" class="btn btn-success btn-block" id="submit">
+          Submit
+        </button>
+      </form>
     </div>
+
     <footer>
       <p>
-        <a href="#">Clear Tables</a> |
         <a href="/api/tables">API Table Link</a> |
         <a href="/api/waitlist">API Wait List</a>
       </p>
