--- a/home.html
+++ b/home.html
@@ -1,84 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>home</title>
 
-    <!-- Latest compiled and minified CSS & JS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="text-center">Hot Restaurant</h1>
-        <hr />
-        <h2 class="text-center">Book a seat before they are all taken</h2>
-        <div class="text-center">
-          <a
-            ><button type="button" class="btn btn-lg btn-info btn-primary">
-              View tables!
-            </button></a
-          >
-          <a class="text-center"
-            ><button
-              id="add-btn"
-              type="button"
-              class="btn btn-lg btn-info btn-danger"
-            >
-              Make a reservation!
-            </button></a
-          >
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <title>home</title>
+
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous" />
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="text-center">Hot Restaurant</h1>
+      <hr />
+      <h2 class="text-center">Book a seat before they are all taken</h2>
+      <div class="text-center">
+        <a href = "/tables"><button type="button" class="btn btn-lg btn-info btn-primary" id="ViewTable">
+            View tables!
+          </button></a>
+        <a class="text-center" href = "/reserve"><button id="add-btn" type="button" class="btn btn-lg btn-info btn-danger">
+            Make a reservation!
+          </button></a>
       </div>
     </div>
-    <footer>
-      <p>
-        <a href="/api/tables">API Table Link</a> |
-        <a href="/api/waitlist">API Wait List</a>
-      </p>
-    </footer>
-  </body>
-  <script type="text/javascript">
-    //reservation
-    $("#add-btn").on("click", function(event) {
-      event.preventDefault();
-      var newClient = {
-        name: $("#name")
-          .val()
-          .trim(),
-        phoneNumber: $("#number")
-          .val()
-          .trim(),
-        email: $("#email")
-          .val()
-          .trim(),
-        id: $("#idnumber")
-          .val()
-          .trim()
-      };
+  </div>
+  <footer>
+    <p>
+      <a href="/api/tables">API Table Link</a> |
+      <a href="/api/waitlist">API Wait List</a>
+    </p>
+  </footer>
+</body>
 
-      // Question: What does this code do??
-      $.post("/api/client", newClient).then(function(data) {
-        console.log("add.html", data);
-        alert("Adding client...");
-      });
-    });
-  </script>
+
 </html>
