--- a/tables.html
+++ b/tables.html
@@ -1,71 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Survey</title>
 
-    <!-- Latest compiled and minified CSS & JS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
-      integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
-      integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="text-center">Hot Restaurant</h1>
-        <hr />
-        <h2 class="text-center">Book a seat before they are all taken</h2>
-        <div class="text-center">
-          <a
-            ><button type="button" class="btn btn-lg btn-info btn-primary">
-              View tables!
-            </button></a
-          >
-          <a class="text-center"
-            ><button
-              id="add-btn"
-              type="button"
-              class="btn btn-lg btn-info btn-danger"
-            >
-              Make a reservation!
-            </button></a
-          >
-        </div>
+<head>
+  <meta charset="utf-8" />
+  <title>Survey</title>
+
+  <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="jumbotron">
+      <h1 class="text-center">Hot Restaurant</h1>
+      <hr />
+      <h2 class="text-center">Book a seat before they are all taken</h2>
+      <div class="text-center">
+        <a href ="/tables"><button type="button" class="btn btn-lg btn-info btn-primary">
+            View tables!
+          </button></a>
+        <a class="text-center" href = "/reserve"><button id="add-btn" type="button" class="btn btn-lg btn-info btn-danger">
+            Make a reservation!
+          </button></a>
       </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class= "col-lg-12">
-            <div class="class">
-                <div class = "card-header">
-                    <h4>Current Reservations</h4>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="class">
+          <div class="card-header" id ="Curreserve">
+            <h4>Current Reservations</h4>
+          </div>
+          <div class="card-body">
+            <ul id="tablelist" class="list-group"></ul>
+          </div>
+          <div class="card mt-4">
+            <div class="card-header">
+              <h4>Waiting List</h4>
             </div>
-            <div class="card-body">
-                <ul id="tablelist" class="list-group"></ul>
-            </div>
-            <div class="card mt-4">
-                    <div class = "card-header">
-                            <h4>Waiting List</h4>
-                    </div>
-            </div>
+          </div>
         </div>
-    </div>
-    <footer>
-      <p>
-        <a href="#">Clear Tables</a> |
-        <a href="/api/tables">API Table Link</a> |
-        <a href="/api/waitlist">API Wait List</a>
-      </p>
-    </footer>
-  </body>
+      </div>
+      <footer>
+        <p>
+          <a href="">Clear Tables</a> |
+          <a href="/api/tables">API Table Link</a> |
+          <a href="/api/waitlist">API Wait List</a>
+        </p>
+      </footer>
+</body>
+
 </html>
+<script type="text/javascript">
+  //reservation
+  $(document).ready()
+  {
+    $.get("/api/tables", function (data) {
+      console.log(data);
+      $("#Curreserve").append("ID" +  " " + "Name" + "" + "PhoneNumber" +  " " + "Email");
+      $("#Curreserve").append("<br>");
+      for (var i=0;i<data.length;i++)
+      {
+        var name = data[i].name;
+        var phoneNum = data[i].phoneNumber;
+        var email = data[i].email;
+        var id = data[i].id;
+        $("#Curreserve").append(id +  " " + name + "" + phoneNum +  " " +email);
+        $("#Curreserve").append("<br>");
+      }
+
+      if (err) {
+        console.log(err);
+      }
+
+    });
+  }
+
+
+</script>
